--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,8 @@
     </select>
     <input type="text" id="folderName" class="form-control" placeholder="Folder name (optional)">
     <button id="saveButton" class="default">Save</button>
+    <label for="darkModeToggle">Dark Mode:</label>
+    <input type="checkbox" id="darkModeToggle">
   </div>
   <script src="popup.js"></script>
 </body>
